fixed mobile overflow bug

--- a/style.sass
+++ b/style.sass
@@ -5,6 +5,7 @@
     overflow-x: hidden
 
 body
+    overflow-x: hidden
     margin: 0
     max-width: 1000px
     margin: auto
